VARParser.automaton
State 0:
program' -> . program [ # ]
-- On error shift to state 1
-- On VAR shift to state 2
-- On program shift to state 10
-- On list(data_declaration) shift to state 11
-- On data_declaration shift to state 102
-- On LABEL reduce production list(data_declaration) -> 
-- On EOF reduce production list(data_declaration) -> 

State 1:
program -> error . [ # ]
-- On # reduce production program -> error 

State 2:
data_declaration -> VAR . LABEL SEMI [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
data_declaration -> VAR . LABEL SET immediate SEMI [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
-- On LABEL shift to state 3

State 3:
data_declaration -> VAR LABEL . SEMI [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
data_declaration -> VAR LABEL . SET immediate SEMI [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
-- On SET shift to state 4
-- On SEMI shift to state 9

State 4:
data_declaration -> VAR LABEL SET . immediate SEMI [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On immediate shift to state 7

State 5:
immediate -> INT . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production immediate -> INT 
-- On SLASH reduce production immediate -> INT 
-- On SET reduce production immediate -> INT 
-- On SEMI reduce production immediate -> INT 
-- On RP reduce production immediate -> INT 
-- On PRCT reduce production immediate -> INT 
-- On PLUS reduce production immediate -> INT 
-- On OR reduce production immediate -> INT 
-- On NEQ reduce production immediate -> INT 
-- On MINUS reduce production immediate -> INT 
-- On LT reduce production immediate -> INT 
-- On LP reduce production immediate -> INT 
-- On LE reduce production immediate -> INT 
-- On GT reduce production immediate -> INT 
-- On GE reduce production immediate -> INT 
-- On EQ reduce production immediate -> INT 
-- On COMMA reduce production immediate -> INT 
-- On AND reduce production immediate -> INT 

State 6:
immediate -> BOOL . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production immediate -> BOOL 
-- On SLASH reduce production immediate -> BOOL 
-- On SET reduce production immediate -> BOOL 
-- On SEMI reduce production immediate -> BOOL 
-- On RP reduce production immediate -> BOOL 
-- On PRCT reduce production immediate -> BOOL 
-- On PLUS reduce production immediate -> BOOL 
-- On OR reduce production immediate -> BOOL 
-- On NEQ reduce production immediate -> BOOL 
-- On MINUS reduce production immediate -> BOOL 
-- On LT reduce production immediate -> BOOL 
-- On LP reduce production immediate -> BOOL 
-- On LE reduce production immediate -> BOOL 
-- On GT reduce production immediate -> BOOL 
-- On GE reduce production immediate -> BOOL 
-- On EQ reduce production immediate -> BOOL 
-- On COMMA reduce production immediate -> BOOL 
-- On AND reduce production immediate -> BOOL 

State 7:
data_declaration -> VAR LABEL SET immediate . SEMI [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
-- On SEMI shift to state 8

State 8:
data_declaration -> VAR LABEL SET immediate SEMI . [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
-- On WHILE reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On VAR reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On STAR reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On RETURN reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On PRINT reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On NOP reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On LABEL reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On IF reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On EXIT reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On EOF reduce production data_declaration -> VAR LABEL SET immediate SEMI 
-- On END reduce production data_declaration -> VAR LABEL SET immediate SEMI 

State 9:
data_declaration -> VAR LABEL SEMI . [ WHILE VAR STAR RETURN PRINT NOP LABEL IF EXIT EOF END ]
-- On WHILE reduce production data_declaration -> VAR LABEL SEMI 
-- On VAR reduce production data_declaration -> VAR LABEL SEMI 
-- On STAR reduce production data_declaration -> VAR LABEL SEMI 
-- On RETURN reduce production data_declaration -> VAR LABEL SEMI 
-- On PRINT reduce production data_declaration -> VAR LABEL SEMI 
-- On NOP reduce production data_declaration -> VAR LABEL SEMI 
-- On LABEL reduce production data_declaration -> VAR LABEL SEMI 
-- On IF reduce production data_declaration -> VAR LABEL SEMI 
-- On EXIT reduce production data_declaration -> VAR LABEL SEMI 
-- On EOF reduce production data_declaration -> VAR LABEL SEMI 
-- On END reduce production data_declaration -> VAR LABEL SEMI 

State 10:
program' -> program . [ # ]
-- On # accept program

State 11:
program -> list(data_declaration) . list(function_definition) EOF [ # ]
-- On LABEL shift to state 12
-- On list(function_definition) shift to state 104
-- On function_definition shift to state 106
-- On EOF reduce production list(function_definition) -> 

State 12:
function_definition -> LABEL . LP loption(separated_nonempty_list(COMMA,LABEL)) RP BEGIN list(data_declaration) list(terminated_instruction) END [ LABEL EOF ]
-- On LP shift to state 13

State 13:
function_definition -> LABEL LP . loption(separated_nonempty_list(COMMA,LABEL)) RP BEGIN list(data_declaration) list(terminated_instruction) END [ LABEL EOF ]
-- On LABEL shift to state 14
-- On separated_nonempty_list(COMMA,LABEL) shift to state 17
-- On loption(separated_nonempty_list(COMMA,LABEL)) shift to state 18
-- On RP reduce production loption(separated_nonempty_list(COMMA,LABEL)) -> 

State 14:
separated_nonempty_list(COMMA,LABEL) -> LABEL . [ RP ]
separated_nonempty_list(COMMA,LABEL) -> LABEL . COMMA separated_nonempty_list(COMMA,LABEL) [ RP ]
-- On COMMA shift to state 15
-- On RP reduce production separated_nonempty_list(COMMA,LABEL) -> LABEL 

State 15:
separated_nonempty_list(COMMA,LABEL) -> LABEL COMMA . separated_nonempty_list(COMMA,LABEL) [ RP ]
-- On LABEL shift to state 14
-- On separated_nonempty_list(COMMA,LABEL) shift to state 16

State 16:
separated_nonempty_list(COMMA,LABEL) -> LABEL COMMA separated_nonempty_list(COMMA,LABEL) . [ RP ]
-- On RP reduce production separated_nonempty_list(COMMA,LABEL) -> LABEL COMMA separated_nonempty_list(COMMA,LABEL) 

State 17:
loption(separated_nonempty_list(COMMA,LABEL)) -> separated_nonempty_list(COMMA,LABEL) . [ RP ]
-- On RP reduce production loption(separated_nonempty_list(COMMA,LABEL)) -> separated_nonempty_list(COMMA,LABEL) 

State 18:
function_definition -> LABEL LP loption(separated_nonempty_list(COMMA,LABEL)) . RP BEGIN list(data_declaration) list(terminated_instruction) END [ LABEL EOF ]
-- On RP shift to state 19

State 19:
function_definition -> LABEL LP loption(separated_nonempty_list(COMMA,LABEL)) RP . BEGIN list(data_declaration) list(terminated_instruction) END [ LABEL EOF ]
-- On BEGIN shift to state 20

State 20:
function_definition -> LABEL LP loption(separated_nonempty_list(COMMA,LABEL)) RP BEGIN . list(data_declaration) list(terminated_instruction) END [ LABEL EOF ]
-- On VAR shift to state 2
-- On list(data_declaration) shift to state 21
-- On data_declaration shift to state 102
-- On WHILE reduce production list(data_declaration) -> 
-- On STAR reduce production list(data_declaration) -> 
-- On RETURN reduce production list(data_declaration) -> 
-- On PRINT reduce production list(data_declaration) -> 
-- On NOP reduce production list(data_declaration) -> 
-- On LABEL reduce production list(data_declaration) -> 
-- On IF reduce production list(data_declaration) -> 
-- On EXIT reduce production list(data_declaration) -> 
-- On END reduce production list(data_declaration) -> 

State 21:
function_definition -> LABEL LP loption(separated_nonempty_list(COMMA,LABEL)) RP BEGIN list(data_declaration) . list(terminated_instruction) END [ LABEL EOF ]
-- On WHILE shift to state 22
-- On STAR shift to state 24
-- On RETURN shift to state 65
-- On PRINT shift to state 69
-- On NOP shift to state 73
-- On LABEL shift to state 28
-- On IF shift to state 74
-- On EXIT shift to state 81
-- On terminated_instruction shift to state 82
-- On list(terminated_instruction) shift to state 100
-- On left_expression shift to state 84
-- On instruction shift to state 95
-- On END reduce production list(terminated_instruction) -> 

State 22:
terminated_instruction -> WHILE . LP expression RP block [ WHILE STAR RETURN PRINT NOP LABEL IF EXIT END ]
-- On LP shift to state 23

State 23:
terminated_instruction -> WHILE LP . expression RP block [ WHILE STAR RETURN PRINT NOP LABEL IF EXIT END ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 62

State 24:
left_expression -> STAR . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 61

State 25:
expression -> NOT . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 60

State 26:
expression -> MINUS . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 59

State 27:
expression -> LP . expression RP [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 31

State 28:
left_expression -> LABEL . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production left_expression -> LABEL 
-- On SLASH reduce production left_expression -> LABEL 
-- On SET reduce production left_expression -> LABEL 
-- On SEMI reduce production left_expression -> LABEL 
-- On RP reduce production left_expression -> LABEL 
-- On PRCT reduce production left_expression -> LABEL 
-- On PLUS reduce production left_expression -> LABEL 
-- On OR reduce production left_expression -> LABEL 
-- On NEQ reduce production left_expression -> LABEL 
-- On MINUS reduce production left_expression -> LABEL 
-- On LT reduce production left_expression -> LABEL 
-- On LP reduce production left_expression -> LABEL 
-- On LE reduce production left_expression -> LABEL 
-- On GT reduce production left_expression -> LABEL 
-- On GE reduce production left_expression -> LABEL 
-- On EQ reduce production left_expression -> LABEL 
-- On COMMA reduce production left_expression -> LABEL 
-- On AND reduce production left_expression -> LABEL 

State 29:
expression -> left_expression . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production expression -> left_expression 
-- On SLASH reduce production expression -> left_expression 
-- On SET reduce production expression -> left_expression 
-- On SEMI reduce production expression -> left_expression 
-- On RP reduce production expression -> left_expression 
-- On PRCT reduce production expression -> left_expression 
-- On PLUS reduce production expression -> left_expression 
-- On OR reduce production expression -> left_expression 
-- On NEQ reduce production expression -> left_expression 
-- On MINUS reduce production expression -> left_expression 
-- On LT reduce production expression -> left_expression 
-- On LP reduce production expression -> left_expression 
-- On LE reduce production expression -> left_expression 
-- On GT reduce production expression -> left_expression 
-- On GE reduce production expression -> left_expression 
-- On EQ reduce production expression -> left_expression 
-- On COMMA reduce production expression -> left_expression 
-- On AND reduce production expression -> left_expression 

State 30:
expression -> immediate . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production expression -> immediate 
-- On SLASH reduce production expression -> immediate 
-- On SET reduce production expression -> immediate 
-- On SEMI reduce production expression -> immediate 
-- On RP reduce production expression -> immediate 
-- On PRCT reduce production expression -> immediate 
-- On PLUS reduce production expression -> immediate 
-- On OR reduce production expression -> immediate 
-- On NEQ reduce production expression -> immediate 
-- On MINUS reduce production expression -> immediate 
-- On LT reduce production expression -> immediate 
-- On LP reduce production expression -> immediate 
-- On LE reduce production expression -> immediate 
-- On GT reduce production expression -> immediate 
-- On GE reduce production expression -> immediate 
-- On EQ reduce production expression -> immediate 
-- On COMMA reduce production expression -> immediate 
-- On AND reduce production expression -> immediate 

State 31:
expression -> LP expression . RP [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . PLUS expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . MINUS expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . STAR expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . SLASH expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . PRCT expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . EQ expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . NEQ expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . LT expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . LE expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . GT expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . GE expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . AND expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
expression -> expression . OR expression [ STAR SLASH RP PRCT PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
-- On STAR shift to state 32
-- On SLASH shift to state 34
-- On RP shift to state 36
-- On PRCT shift to state 37
-- On PLUS shift to state 39
-- On OR shift to state 41
-- On NEQ shift to state 43
-- On MINUS shift to state 45
-- On LT shift to state 47
-- On LE shift to state 49
-- On GT shift to state 51
-- On GE shift to state 53
-- On EQ shift to state 55
-- On AND shift to state 57

State 32:
expression -> expression STAR . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 33

State 33:
expression -> expression . PLUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression STAR expression . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production expression -> expression STAR expression 
-- On SLASH reduce production expression -> expression STAR expression 
-- On SET reduce production expression -> expression STAR expression 
-- On SEMI reduce production expression -> expression STAR expression 
-- On RP reduce production expression -> expression STAR expression 
-- On PRCT reduce production expression -> expression STAR expression 
-- On PLUS reduce production expression -> expression STAR expression 
-- On OR reduce production expression -> expression STAR expression 
-- On NEQ reduce production expression -> expression STAR expression 
-- On MINUS reduce production expression -> expression STAR expression 
-- On LT reduce production expression -> expression STAR expression 
-- On LP reduce production expression -> expression STAR expression 
-- On LE reduce production expression -> expression STAR expression 
-- On GT reduce production expression -> expression STAR expression 
-- On GE reduce production expression -> expression STAR expression 
-- On EQ reduce production expression -> expression STAR expression 
-- On COMMA reduce production expression -> expression STAR expression 
-- On AND reduce production expression -> expression STAR expression 

State 34:
expression -> expression SLASH . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 35

State 35:
expression -> expression . PLUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression SLASH expression . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production expression -> expression SLASH expression 
-- On SLASH reduce production expression -> expression SLASH expression 
-- On SET reduce production expression -> expression SLASH expression 
-- On SEMI reduce production expression -> expression SLASH expression 
-- On RP reduce production expression -> expression SLASH expression 
-- On PRCT reduce production expression -> expression SLASH expression 
-- On PLUS reduce production expression -> expression SLASH expression 
-- On OR reduce production expression -> expression SLASH expression 
-- On NEQ reduce production expression -> expression SLASH expression 
-- On MINUS reduce production expression -> expression SLASH expression 
-- On LT reduce production expression -> expression SLASH expression 
-- On LP reduce production expression -> expression SLASH expression 
-- On LE reduce production expression -> expression SLASH expression 
-- On GT reduce production expression -> expression SLASH expression 
-- On GE reduce production expression -> expression SLASH expression 
-- On EQ reduce production expression -> expression SLASH expression 
-- On COMMA reduce production expression -> expression SLASH expression 
-- On AND reduce production expression -> expression SLASH expression 

State 36:
expression -> LP expression RP . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production expression -> LP expression RP 
-- On SLASH reduce production expression -> LP expression RP 
-- On SET reduce production expression -> LP expression RP 
-- On SEMI reduce production expression -> LP expression RP 
-- On RP reduce production expression -> LP expression RP 
-- On PRCT reduce production expression -> LP expression RP 
-- On PLUS reduce production expression -> LP expression RP 
-- On OR reduce production expression -> LP expression RP 
-- On NEQ reduce production expression -> LP expression RP 
-- On MINUS reduce production expression -> LP expression RP 
-- On LT reduce production expression -> LP expression RP 
-- On LP reduce production expression -> LP expression RP 
-- On LE reduce production expression -> LP expression RP 
-- On GT reduce production expression -> LP expression RP 
-- On GE reduce production expression -> LP expression RP 
-- On EQ reduce production expression -> LP expression RP 
-- On COMMA reduce production expression -> LP expression RP 
-- On AND reduce production expression -> LP expression RP 

State 37:
expression -> expression PRCT . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 38

State 38:
expression -> expression . PLUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression PRCT expression . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR reduce production expression -> expression PRCT expression 
-- On SLASH reduce production expression -> expression PRCT expression 
-- On SET reduce production expression -> expression PRCT expression 
-- On SEMI reduce production expression -> expression PRCT expression 
-- On RP reduce production expression -> expression PRCT expression 
-- On PRCT reduce production expression -> expression PRCT expression 
-- On PLUS reduce production expression -> expression PRCT expression 
-- On OR reduce production expression -> expression PRCT expression 
-- On NEQ reduce production expression -> expression PRCT expression 
-- On MINUS reduce production expression -> expression PRCT expression 
-- On LT reduce production expression -> expression PRCT expression 
-- On LP reduce production expression -> expression PRCT expression 
-- On LE reduce production expression -> expression PRCT expression 
-- On GT reduce production expression -> expression PRCT expression 
-- On GE reduce production expression -> expression PRCT expression 
-- On EQ reduce production expression -> expression PRCT expression 
-- On COMMA reduce production expression -> expression PRCT expression 
-- On AND reduce production expression -> expression PRCT expression 

State 39:
expression -> expression PLUS . expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 24
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LP shift to state 27
-- On LABEL shift to state 28
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On left_expression shift to state 29
-- On immediate shift to state 30
-- On expression shift to state 40

State 40:
expression -> expression . PLUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression PLUS expression . [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH SET SEMI RP PRCT PLUS OR NEQ MINUS LT LP LE GT GE EQ COMMA AND ]
-- On STAR shift to state 32
-- On SLASH shift to state 34
-- On PRCT shift to state 37
-- On SET reduce production expression -> expression PLUS expression 
-- On SEMI reduce production expression -> expression PLUS expression 
-- On RP reduce production expression -> expression PLUS expression 
-- On PLUS reduce production expression -> expression PLUS expression 
-- On OR reduce production expression -> expression PLUS expression 
-- On NEQ reduce production expression -> expression PLUS expression 
-- On MINUS reduce production expression -> expression PLUS expression 
-- On LT reduce production expression -> expression PLUS expression 
-- On LP reduce production expression -> expression PLUS expression 
-- On LE reduce production expression -> expression PLUS expression 
-- On GT reduce production expression -> expression PLUS expression 
-- On GE reduce production expression -> expression PLUS expression 
-- On EQ reduce production expression -> expression PLUS expression 
-- On COMMA reduce production expression -> expression PLUS expression 
-- On AND reduce production expression -> expression PLUS expression 
